--- a/나만의 일기장/detail.css
+++ b/나만의 일기장/detail.css
@@ -88,6 +88,46 @@
     }
   }
 }
+
+.clipContainer {
+  display: flex;
+  justify-content: end;
+  margin-bottom: 10px;
+}
+#clipboard {
+  cursor: pointer;
+  display: flex;
+  margin-left: 3px;
+  gap: 5px;
+  border: none;
+  background-color: white;
+}
+.copyImg {
+  width: 20px;
+  height: 20px;
+}
+.toastMessage {
+  opacity: 0;
+  position: fixed;
+  bottom: -100px;
+  width: 500px;
+  text-align: center;
+  left: 50%;
+  transform: translate(-50%, 0);
+  padding: 10px 50px;
+  background: black;
+  border-radius: 10px;
+  font-size: 0.9rem;
+  color: #fff;
+  box-shadow: 3px 4px 11px 0px #00000040;
+  transition: all 0.5s;
+}
+/*토스트 메시지 활성화 되었을 때*/
+.toastMessage.active {
+  opacity: 100%;
+  bottom: 50px;
+}
+
 #addContent {
   display: flex;
   flex-direction: column;
