--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
 }
 
 a {
@@ -22,6 +23,110 @@ a {
   flex-direction: column;
   margin: 0 1.25rem 2.5rem; /* 0 20px 40px */
 }
+
+  /* 모달파트 */
+
+.CSS_모달그룹 {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.CSS_모달배경 {
+  /* 뷰포트 위드 */
+  width: 100vw;
+
+  height: 100vh;
+  background-color: lightgray;
+  opacity: 0.5;
+}
+
+.CSS_일기등록완료모달 {
+  position: fixed;
+  top: calc(50% - 200px / 2);  /* height / 2 */
+  left: calc(50% - 420px / 2);  /* width / 2 */
+  display: flex;
+  width: 420px;
+  height: 200px;
+  padding: 24px;
+  flex-direction: column;
+  gap: 40px;
+  border-radius: 24px;
+  background-color: white;
+}
+
+.CSS_모달안내말 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
+.CSS_모달안내말_상단 {
+text-align: center;
+font-size: 20px;
+font-weight: 700;
+letter-spacing: -0.24px;
+}
+
+.CSS_모달안내말_하단 {
+text-align: center;
+font-size: 16px;
+font-weight: 500;
+letter-spacing: -0.2px;
+}
+
+.일기등록모달확인버튼 {
+  display: flex;
+  height: 48px;
+  padding: 8px 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  color: #FFF;
+  background-color: #000;
+  width: 100%;
+  margin-top: 30px;
+}
+
+.CSS_계속취소버튼그룹 {
+  display: flex;
+  gap: 10px;
+  width: 100%;
+}
+
+.CSS_일기등록모달계속버튼 {
+  display: flex;
+  height: 38px;
+  padding: 8px 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  color: #000;
+  background-color: #FFF;
+  width: 50%;
+}
+
+.CSS_일기등록모달취소버튼 {
+  display: flex;
+  height: 38px;
+  padding: 8px 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  color: #FFF;
+  background-color: #000;
+  width: 50%;
+}
+
+/* 처음부터 헤더파트 */
 
 .CSS_헤더 {
   width: 100%;
@@ -78,12 +183,9 @@ a {
 .CSS_필터_영역_배경 {
   display: flex;
   width: 100%;
-  height: 2rem; /* 32px */
   margin: 0;
   position: sticky;
   top: 0;
-  backdrop-filter: blur(0.625rem); /* 10px */
-  margin-bottom: 2rem; /* 32px */
   z-index: 1;
 }
 
@@ -93,13 +195,39 @@ a {
   padding: 0.25rem; /* 4px */
   border-radius: 0.5rem; /* 8px */
   border: 0.0625rem solid #c7c7c7; /* 1px */
-  height: 2rem; /* 32px */
-  margin-bottom: 2.625rem; /* 42px */
+  height:48px;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .CSS_색상반전 {
   filter: invert(1); /* 색상 반전 */
 }
+/* 모달 버튼 부분 */
+.CSS_필터랑모달묶은그룹 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.CSS_일기쓰기모달버튼 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 10px;
+  border-radius: 8px;
+  background-color: #000;
+  color:#fff;
+  height: 48px;
+  min-width: 110px;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
 .CSS_메인상자 {
   display: flex;
 }
@@ -211,15 +339,18 @@ a {
   top: 2.5rem; /* 40px */
   width: 1.875rem; /* 30px */
   height: 1.875rem; /* 30px */
-  position: relative;
+  /* position: relative; 튀어나옴 이슈로 인해 잠시 주석*/
   z-index: 1;
 }
 
 /* 일기등록 상자 */
 .CSS_등록상자 {
-  max-width: 350px;
+  position: fixed;
+  top: calc(50% - 500px / 2);  /* height / 2 */
+  left: calc(50% - 360px / 2);  /* width / 2 */
+  max-width: 360px;
   min-width: 22.5rem; /* 360px */
-  height: fit-content;
+  height: fit-content;  /* 500px */
   border-radius: 1rem; /* 16px */
   background-color: #fff;
   border: 0.0625rem solid #d4d3d3; /* 1px */
@@ -305,8 +436,15 @@ a {
   color: #ababab;
 }
 
+.CSS_일기쓰기버튼모음 {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
 .CSS_일기쓰기_등록버튼 {
-  width: 100%;
+  min-width: 75px;
+  width: 40%;
   border-radius: 0.5rem; /* 8px */
   background-color: #c7c7c7;
   height: 3rem; /* 48px */
@@ -320,6 +458,23 @@ a {
   font-weight: 600;
   line-height: 1.5rem; /* 24px */
   color: #f2f2f2;
+}
+
+.CSS_일기쓰기_닫기버튼 {
+  min-width: 75px;
+  width: 40%;
+  border-radius: 0.5rem; /* 8px */
+  background-color: #FFF;
+  height: 3rem; /* 48px */
+  display: flex;
+  align-items: center;
+  border: 1px solid black;
+  justify-content: center;
+  padding: 0.5rem 0.625rem; /* 8px 10px */
+  box-sizing: border-box;
+  font-size: 1.125rem; /* 18px */
+  font-weight: 600;
+  line-height: 1.5rem; /* 24px */
 }
 
 /* 푸터 영역 */
