--- a/section05/css/common.css
+++ b/section05/css/common.css
@@ -1,4 +1,5 @@
 @import './reset.css';
+@import './modal.css';
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css');
 
 /* Typography */
