--- a/01-diary/detail/detail.css
+++ b/01-diary/detail/detail.css
@@ -139,6 +139,35 @@
     color: #333333;
 }
 
+.main_contents_text_copy_items {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.main_contents_text_copy_button {
+    width: 7.6875rem;
+    height: 2.9375rem;
+    font-weight: 400;
+    font-size: 1rem;
+
+    background-color: white;
+    color: #1C1C1C;
+
+    border: 1px solid #D4D3D3;
+    border-radius: 0.5rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.main_contents_text_copy_button:active {
+
+}
+
 .main_contents_button_container {
     display: flex;
     justify-content: flex-end;
@@ -233,4 +262,47 @@
     width: 100%;
     height: 0.0625rem;
     border: 0.0625rem solid #E4E4E4;
+}
+
+.toast_message_container {
+    width: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.toast_message {
+    width: 47.5rem;
+    height: 3.5rem;
+
+    border-radius: 0.5rem;
+    background-color: #000000E5;
+    color: white;
+
+    position: fixed;
+    bottom: 50px;
+    left: (50% - 3.5rem/2);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-weight: 500;
+    font-size: 16px;
+
+    animation-name: toastAnimation;
+    animation-duration: 2s;
+
+    animation-iteration-count: 1;
+}
+
+@keyframes toastAnimation {
+    from {
+        /* 투명도 */
+        opacity: 10%;
+    }
+
+     to {
+        opacity: 100%;
+     }
 }
