✨ feat: 일기 등록 중첩 모달 추가

--- a/section05/css/common.css
+++ b/section05/css/common.css
@@ -8,6 +8,7 @@
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
   color: var(--gray-b);
   font-size: 10px;
+  font-weight: var(--weight-light);
 }
 
 /* Variables */
