--- a/depth01/myDiary_detail.css
+++ b/depth01/myDiary_detail.css
@@ -26,7 +26,8 @@ a {
 
 .container {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     background-color: #FCFCFC;
     display: flex;
     flex-direction: column;
@@ -121,7 +122,7 @@ a {
 }
 
 .body__content {
-    height: 40rem;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -198,7 +199,7 @@ a {
 
 .content__text {
     width: 115.2rem;
-    height: 30rem;
+    min-height: 30rem;
     border-radius: 0.8rem;
     background-color: #F2F2F2;
     font-size: 2rem;
@@ -396,4 +397,10 @@ label {
     @media (max-width: 375px) {
         font-size: 1.4rem;
     }
+}
+
+.comment__void {
+    width: 100%;
+    height: 10rem;
+    background-color: #FCFCFC;
 }
