댓글 영역 여백 수정

--- a/scss/comment.scss
+++ b/scss/comment.scss
@@ -1,7 +1,8 @@
 .commentWrap {
   max-width: var(--max-width);
   margin: 0 auto;
-  padding: 24px 0 40px;
+  padding: 24px 0;
+
   .commentInputWrap {
     display: flex;
     align-items: stretch;
