--- a/css/comment.css
+++ b/css/comment.css
@@ -1,7 +1,7 @@
 .commentWrap {
   max-width: var(--max-width);
   margin: 0 auto;
-  padding: 24px 0 40px;
+  padding: 24px 0;
 }
 .commentWrap .commentInputWrap {
   display: flex;
