--- a/css/detail.css
+++ b/css/detail.css
@@ -1,9 +1,8 @@
 .detailWrap {
-  min-height: 60vh;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  padding: 3.125rem 0;
+  padding-top: 4rem;
 }
 .detailWrap h2 {
   border-bottom: 2px solid #000;
@@ -37,6 +36,9 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+}
+.detailWrap .detailContentWrap .detailContent {
+  min-height: 30vh;
 }
 .detailWrap .buttonWrap {
   width: 100%;
