--- a/scss/detail.scss
+++ b/scss/detail.scss
@@ -1,9 +1,8 @@
 .detailWrap {
-  min-height: 60vh;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  padding: 3.125rem 0;
+  padding-top: 4rem; // 64px
 
   h2 {
     border-bottom: 2px solid #000;
@@ -41,6 +40,10 @@
     display: flex;
     flex-direction: column;
     gap: 0.75rem; //12px
+
+    .detailContent {
+      min-height: 30vh;
+    }
   }
 
   .buttonWrap {
