--- a/css/media.css
+++ b/css/media.css
@@ -43,6 +43,10 @@
     height: 80vh;
     overflow-y: auto;
   }
+  .editWrap .diaryWrite {
+    padding: 1.5rem 0;
+    border-bottom: 1px solid #000;
+  }
   .diaryWrite {
     max-width: 100%;
     width: 100%;
@@ -50,10 +54,34 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 24px;
+  }
+  .diaryWrite h3 {
+    font-size: 1.25rem;
   }
   .diaryWrite .diaryWriteInner {
     gap: 20px;
     overflow-y: scroll;
+  }
+  .diaryWrite .moodTypeRadio span {
+    font-weight: 600;
+    font-size: 1rem;
+  }
+  .diaryWrite .moodTypeRadio .radioWrap {
+    font-size: 14px;
+    flex-direction: column;
+  }
+  .diaryWrite .buttonWrap {
+    gap: 0.375rem;
+  }
+  .diaryWrite .diaryContent input,
+  .diaryWrite .buttonBox button,
+  .editWrap .diaryWrite .buttonBox button,
+  .commentWrap .commentInputWrap #commentInput {
+    height: 40px;
+  }
+  .diaryWrite .diaryContent label span {
+    font-size: 12px;
   }
   .navBottom {
     flex-wrap: wrap;
@@ -81,17 +109,13 @@
   .detailHeaderTop {
     padding: 0 20px;
   }
-  .detailWrap h2 {
-    font-size: 1rem;
-  }
-  .detailWrap h3 {
-    font-size: 1.25rem;
-  }
-  .diaryWrite .moodTypeRadio span {
-    font-size: 1rem;
+  .scrollBox {
+    width: 100%;
+    padding: 0 20px;
+    bottom: 40px;
   }
   .detailWrap .buttonWrap {
-    gap: 0.375rem;
+    gap: 0.5rem;
   }
   .detailWrap .detailInfo .moodType {
     font-size: 0.875rem;
@@ -103,30 +127,6 @@
   .detailWrap .detailInfo .detailDate {
     font-size: 0.75rem;
   }
-  .scrollBox {
-    width: 100%;
-    padding: 0 20px;
-    bottom: 40px;
-  }
-  .diaryWrite .diaryContent input,
-  .diaryWrite .buttonBox button,
-  .commentWrap .commentInputWrap #commentInput {
-    height: 40px;
-  }
-  article.diaryWrite .moodTypeRadio {
-    font-size: 20px;
-  }
-  article.diaryWrite .moodTypeRadio > span {
-    font-weight: 600;
-    font-size: 20px;
-  }
-  article.diaryWrite .moodTypeRadio .radioWrap {
-    font-size: 14px;
-    flex-direction: column;
-  }
-  .diaryWrite .diaryContent label span {
-    font-size: 12px;
-  }
   .commentWrap {
     padding-left: 20px;
     padding-right: 20px;
@@ -136,14 +136,14 @@
   .headerBanner img {
     transform: none;
   }
-  .diaryWrite {
-    gap: 24px;
-  }
   .navBottom.stickyAddStyle {
     justify-content: space-between;
   }
   .navBottom.stickyAddStyle .filterSearchBox {
     width: auto;
+  }
+  .navBottom.stickyAddStyle .filterSearchBox .searchMobilePopBtn {
+    display: none;
   }
   .navBottom .filterSearchBox {
     width: 100%;
@@ -174,21 +174,12 @@
   .navBottom .filterSearchBox .searchMobilePopBtn.active {
     background-color: var(--bg-color-1);
   }
-  .navBottom.stickyAddStyle .searchMobilePopBtn {
-    display: none;
-  }
   .diaryWrite .moodTypeRadio .radioWrap {
     padding: 0 2px;
     flex-direction: column;
   }
   .diaryWrite .diaryContent {
     gap: 16px;
-  }
-  .diaryWrite .moodTypeRadio span {
-    font-size: 20px;
-  }
-  .diaryWrite .moodTypeRadio .radioWrap label {
-    font-size: 16px;
   }
   .diaryWrite .buttonWrap button {
     height: 40px;
