--- a/style/dailyStyle.css
+++ b/style/dailyStyle.css
@@ -144,6 +144,21 @@ article {
     width: 640px;
     aspect-ratio: 1/1;
 }
+.dog-img-before {
+    width: 640px;
+    height: 640px;
+    border: 1px solid gray;
+    background-color: lightgray;
+    border-radius: 24px;
+}
+.line {
+    width: 500px;
+    height: 500px;
+    background-color: white;
+    filter: blur(70px);
+
+    animation: skeleton 2s ease infinite;
+}
 
 .post-container {
     max-width: 18dvw;
@@ -491,5 +506,13 @@ footer {
     }
     footer {
         display: none;
+    }
+}
+@keyframes skeleton {
+    from {
+        transform: translate(0px, 0px) rotate(30deg);
+    }
+    to {
+        transform: translate(640px, 640px) rotate(30deg);
     }
 }
