--- a/section05/css/modal.css
+++ b/section05/css/modal.css
@@ -26,7 +26,7 @@
   padding: var(--gap-lg);
 }
 
-.modal-add-cancel {
+.modal-nested {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -40,11 +40,11 @@
   padding: var(--gap-lg);
 }
 
-.modal-add-cancel h2 {
+.modal-nested h2 {
   font-size: 2.4rem;
   font-weight: var(--weight-bold);
 }
-.modal-add-cancel p {
+.modal-nested p {
   font-size: 2rem;
   font-weight: var(--weight-medium);
   margin-top: var(--gap-sm);
@@ -68,6 +68,11 @@
   font-weight: var(--weight-semi-bold);
 }
 
+.modal-actions button:only-child {
+  width: 100%;
+}
+
+.modal-actions button:only-child,
 .modal-actions button:nth-child(2) {
   filter: invert();
 }
