--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -128,31 +128,22 @@
   align-items: center;
   gap: 2.5rem;
 }
-#photo_gallery > img {
-  border-radius: 1.5rem;
-  width: 30rem;
-  height: 30rem;
-}
-#skeletonBox {
-  width: 30rem;
-  height: 30rem;
-  border-radius: 1.5rem;
-}
 #skeleton {
-  width: 100px;
-  height: 800px;
+  width: 3.333rem;
+  height: 26.667rem;
   background-color: white;
-  filter: blur(70px);
+  filter: blur(2.333rem);
   animation-name: animation;
   animation-duration: 1s;
   animation-iteration-count: infinite;
 }
 .dogImage{
   width: 30rem;
-  height: 30rem;
+  aspect-ratio:  1 / 1;
   border-radius: 1.5rem;;
   object-fit: cover;
   background-color: lightblue;
+  border-radius: 1.5rem;
 }
 @keyframes animation {
   from {
